2007-05-08 12:54 -0700  Rocco Rutte  <pdmef@gmx.net>  (763bd781d108)

	* rfc3676.c: f=f: flush buffer contents (if any) after reading input
	Otherwise mutt maybe won't show the last line if it's supposed to
	continue.

2007-05-07 11:50 -0700  Brendan Cully  <brendan@kublai.com>  (89a3e1c5c28b)

	* OPS, UPDATING, curs_main.c, functions.h: Rename next-folder to next-
	unread-mailbox. Remove default binding.

	* muttlib.c: Use signed arithmetic in mutt_gecos_name to avoid an
	overflow. Closes #2885.

2007-05-02 10:50 -0700  N.J. Mann  <njm@njm.f2s.com>  (f6861b85f22b)

	* OPS, curs_main.c, functions.h: Add next-folder command

2007-05-01 10:41 -0700  Brendan Cully  <brendan@kublai.com>  (1ed1cbc7bad4)

	* configure.ac: Make IDN depend on iconv support

2007-04-29 19:10 -0700  Alain Bench  <veronatif@free.fr>  (0e32bd00f341)

	* contrib/smime.rc, smime.c: contrib/smime.rc:
	$smime_verify_opaque_command fallback to -noverify to get signed
	text despite a failed -verify (but send only this first failure
	notice to stderr). smime.c: fflush() before rewind(). Closes #2428.
	Helps Debian Bug 420014

2007-04-24 17:51 -0700  Vincent Lefevre  <vincent@vinc17.org>  (a58527ead950)

	* po/fr.po: Updated French translation.

2007-04-24 14:08 -0700  Michael Elkins  <me@mutt.org>  (21c7e172030f)

	* remailer.c: fixup for mutt_FormatString() changes

2007-04-23 12:12 -0700  Michael Elkins  <me@mutt.org>  (1bae5dcd7292)

	* crypt-gpgme.c: Fix compilation error related to change in
	mutt_FormatString()

2007-04-21 13:05 -0700  Brendan Cully  <brendan@kublai.com>  (4c70812b3104)

	* pgp.c: Use PGP_SECRING to find PGP signing keys. Closes #2878.

2007-04-21 13:00 -0700  Piarres Beobide Egaña  <pi@beobide.net>  (2b97fdbd6ce1)

	* po/eu.po: Updated Basque translation.

2007-04-15 15:43 -0700  Michael Elkins  <me@mutt.org>  (cb9bef17b3a8)

	* hdrline.c, init.h, pager.c, protos.h: Removed hardcoded pager
	progress indicator and add %P format code to $pager_status which